ROX-15941: Run multiple operators from FSS (#951)
* Run multiple operators from FSS

* Refactor installation

* Refactor chart isntallation

* Add TODO

* Review comments

* Review comments

* Add rollback doc

* Fix deployment

* Update fleetshard/README.md

Co-authored-by: Ludovic Cleroux <ludydoo@gmail.com>

* Fix typo

* Ignore long tag version for operator deployment

* Update fleetshard/pkg/central/operator/upgrade.go

Co-authored-by: Marcin Owsiany <porridge@redhat.com>

* Update fleetshard/pkg/runtime/runtime.go

Co-authored-by: Marcin Owsiany <porridge@redhat.com>

* Fail fast on parsing images

* Add TODO to disable installing operator subscription

* Extend rollback in README.md

* Set TODOs for dropping acs operator template

* Add re-terraform in case of rollback

* Log namespace

* Drop CRD check

* Apply suggestions from code review

Co-authored-by: Marcin Owsiany <porridge@redhat.com>

* Review coments

* Update fleetshard/pkg/central/operator/upgrade_test.go

Co-authored-by: Ludovic Cleroux <ludydoo@gmail.com>

* Update fleetshard/pkg/central/charts/data/rhacs-operator/templates/rhacs-operator-deployment.yaml

Co-authored-by: Ludovic Cleroux <ludydoo@gmail.com>

* Fix formatting

* Add note about deleting OperatorGroup

* Rename unique set for unique images

* Update fleetshard/pkg/central/operator/upgrade.go

Co-authored-by: Marcin Owsiany <porridge@redhat.com>

* Rename deployment prefix and pass it completely

---------

Co-authored-by: Ludovic Cleroux <ludydoo@gmail.com>
Co-authored-by: Marcin Owsiany <porridge@redhat.com>

--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -1,3 +1,4 @@
+## TODO(ROX-16646): drop acs-operator.yaml template
 {{- if .Values.acsOperator.enabled }}
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
