--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -3,6 +3,15 @@
 # Declare variables to be passed into your templates.
 
 operator:
-  # TODO: Split image into registry and image name + tag
-  image: quay.io/rhacs-eng/stackrox-operator:3.74.0
-  # TODO: and values for resource limits and requests for both proxy and manager container
+  deploymentPrefix: rhacs-operator-manager-
+
+  # Each item in images should contain `repository` and `tag` key
+  # example:
+  #   images:
+  #   - repository: quay.io/rhacs-eng/stackrox-operator
+  #     tag: 3.74.0
+  #   - repository: quay.io/rhacs-eng/stackrox-operator
+  #     tag: 3.74.1
+  images: []
+  # TODO: add values for resource limits and requests for both proxy and manager container
+  # TODO: add value for kube-rbac-proxy image
