ROX-15980 observability resource requests and limits (#993)

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-06-cr.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-06-cr.yaml
@@ -44,6 +44,41 @@ spec:
           values:
             - rhacs
             - strimzi
+    alertManagerResourceRequirement:
+      requests:
+        cpu: {{ .Values.alertManager.resources.requests.cpu | quote }}
+        memory: {{ .Values.alertManager.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.alertManager.resources.limits.cpu | quote }}
+        memory: {{ .Values.alertManager.resources.limits.memory | quote }}
+    prometheusResourceRequirement:
+      requests:
+        cpu: {{ .Values.prometheus.resources.requests.cpu | quote }}
+        memory: {{ .Values.prometheus.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.prometheus.resources.limits.cpu | quote }}
+        memory: {{ .Values.prometheus.resources.limits.memory | quote }}
+    prometheusOperatorResourceRequirement:
+      requests:
+        cpu: {{ .Values.prometheusOperator.resources.requests.cpu | quote }}
+        memory: {{ .Values.prometheusOperator.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.prometheusOperator.resources.limits.cpu | quote }}
+        memory: {{ .Values.prometheusOperator.resources.limits.memory | quote }}
+    grafanaResourceRequirement:
+      requests:
+        cpu: {{ .Values.grafana.resources.requests.cpu | quote }}
+        memory: {{ .Values.grafana.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.grafana.resources.limits.cpu | quote }}
+        memory: {{ .Values.grafana.resources.limits.memory | quote }}
+    grafanaOperatorResourceRequirement:
+      requests:
+        cpu: {{ .Values.grafanaOperator.resources.requests.cpu | quote }}
+        memory: {{ .Values.grafanaOperator.resources.requests.memory | quote }}
+      limits:
+        cpu: {{ .Values.grafanaOperator.resources.limits.cpu | quote }}
+        memory: {{ .Values.grafanaOperator.resources.limits.memory | quote }}
   storage:
     prometheus:
       volumeClaimTemplate:
