ROX-15980: Set resources requests and limits for fleetshard-sync (#990)

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -40,6 +40,13 @@ fleetshardSync:
       endpoint: ""
       # API key to push telemetry data to a remote backend. Leaving it empty disables telemetry.
       key: ""
+  resources:
+    requests:
+      cpu: "500m"
+      memory: "512Mi"
+    limits:
+      cpu: "500m"
+      memory: "512Mi"
 
 acsOperator:
   enabled: false
