higher wait timeout for openshift-ci

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -64,3 +64,4 @@ export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"30
 
 export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
 export AWS_AUTH_HELPER_DEFAULT=""
+export WAIT_TIMEOUT="10m"
