--- a/fleetshard/pkg/central/charts/data/tenant-resources/values.yaml
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/values.yaml
@@ -1,7 +1,12 @@
-
 egressProxy:
   image: ubuntu/squid:5.2-22.04_beta
-  replicas: 2
-
+  replicas: 3
+  resources:
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      cpu: 200m
+      memory: 256Mi
 labels: {}
 annotations: {}
